--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -32,7 +32,7 @@ body {
   max-width: 100vw;
   scroll-padding-top: 80px;
   color-scheme: light; /* Force light mode */
-
+  scroll-behavior: smooth;
 }
 
 body {
