--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -30,6 +30,7 @@
 html,
 body {
   max-width: 100vw;
+  overflow-x: hidden;
   scroll-padding-top: 80px;
   color-scheme: light; /* Force light mode */
   scroll-behavior: smooth;
